[package]
name = "ray-tracer"
version = "0.1.0"
authors = ["Michal Srb <xixixao@seznam.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orbtk = { git = "https://github.com/redox-os/orbtk.git", branch = "develop" }
vek = { version = "0.12.1", default-features = false, features = ["rgb", "rgba"] }
euc = "0.5.2"